FTKernelAPI_SDK/FTKernel_API/FTKernelAPI.h

//定义配置文件对象的句柄
//Define Config INI file handle
typedef LONG *HConfigIni;
//定义下载任务的句柄
//Define downloader handle
typedef LONG *HDownloader;
	
	//设置兼容某些常见的错误torrent格式
	//Set to open some mistake mistaken TORRENT file
	FTKERNELAPI_API void BTAPI FTK_Context_TorrentFile( BOOL bValidEof = TRUE, BOOL bValidSort = TRUE );
	
	//设置日志的语言文件
	//Set language to write log
	FTKERNELAPI_API void BTAPI FTK_Context_OpenLanguageFile( const char * lpszLanguageFile );
	
	//////////////////////////////////////////////////////////////////////////
	//Downloader interface
	
	//Create a new HDownloader handle
	FTKERNELAPI_API HDownloader BTAPI FTK_Downloader_Open();
	
	//Destroy a HDownloader hanle
	FTKERNELAPI_API void BTAPI FTK_Downloader_Close( HDownloader hDownloader );
	
	//提前的初始化IP过滤对象的函数(FTK_Downloader_Init* 函数之前调用), 过滤某些段的IP地址, "ipfilter.dat" 文件和eMule(电骡)兼容
	//Previous Initialize IP filter object to filter some peer's IP, "ipfilter.dat" file is compatiable with eMule.
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_PreInitIPFilter( HDownloader hDownloader, const char * lpszIPFilterFile, UINT nLevel = 127 );
	
	//提前的初始化, 按照块的先后顺序进行下载(适用于边下载边播放的情况)
	//Previous Initialize, Tell kernel to sequential download piece
	FTKERNELAPI_API void BTAPI FTK_Downloader_PreInitSEQMode( HDownloader hDownloader, int nSEQFileIndex = 0 );
	
	//预先初始化文件选择下载的优先级别
	//数组中，每个元素的值表示: -2:不下载, -1: 低, 0: 一般, 1:高
	//Previous Initialize, Tell kernel to Set priority of file
	//-2: no download, -1: low, 0: middle, 1: high
	FTKERNELAPI_API void BTAPI FTK_Downloader_PreInitFilePriority( HDownloader hDownloader, char *pFilePriority, int nFilesCount );
	
	//初始化下载对象
	//Initialize a HDownloader
	//@lpszTorrentFileName: a torrent file name
	//@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
	//@nPreAllocFileLen: length of preallocated array
	//@bOnlyCheckFile: only verify data of files
	//@lpszDestFileName: the downloaded filename
	//@lpszConfig: kernel configuration file - INI file
	//@lpszLogFileName: output log filename
	//@lpszStatusFileName: downloading status filename
	//@lpszDesKey: DES-EDE2 password
	//@nCodePage: code page of the torrent file
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_Init( 
		HDownloader hDownloader,
		const char * lpszTorrentFileName,
		BYTE *pPreAllocFile, int nPreAllocFileLen,
		BOOL bOnlyCheckFile = FALSE,
		const char * lpszDestFileName = NULL,
		const char * lpszConfig = NULL,
		const char * lpszLogFileName = NULL,
		const char * lpszStatusFileName = NULL,
		BOOL bQuicklySeed = FALSE,
		const char * lpszDesKey = NULL,
		UINT nCodePage = CP_ACP );
	
	//初始化下载对象2
	//Initialize a HDownloader
	//@lpszTorrentFileName: a torrent file name
	//@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
	//@nPreAllocFileLen: length of preallocated array
	//@bOnlyCheckFile: only verify data of files
	//@lpszDestFileName: the downloaded filename
	//@hConfigIni: kernel configuration file handle - INI file
	//@lpszLogFileName: output log filename
	//@lpszStatusFileName: downloading status filename
	//@lpszDesKey: DES-EDE2 password
	//@nCodePage: code page of the torrent file
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_Init2( 
		HDownloader hDownloader,
		const char * lpszTorrentFileName,
		BYTE *pPreAllocFile, int nPreAllocFileLen,
		BOOL bOnlyCheckFile = FALSE,
		const char * lpszDestFileName = NULL,
		HConfigIni hConfigIni = NULL,
		const char * lpszLogFileName = NULL,
		const char * lpszStatusFileName = NULL,
		BOOL bQuicklySeed = FALSE,
		const char * lpszDesKey = NULL,
		UINT nCodePage = CP_ACP );
	
	//初始化下载对象3
	//Initialize a HDownloader
	//@pData: a torrent binary object, a pointer to a binary torrent file content
	//@nLength: the length of a torrent binary object
	//@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
	//@nPreAllocFileLen: length of preallocated array
	//@bOnlyCheckFile: only verify data of files
	//@lpszDestFileName: the downloaded filename
	//@lpszConfig: kernel configuration file - INI file
	//@lpszLogFileName: output log filename
	//@lpszStatusFileName: downloading status filename
	//@lpszDesKey: DES-EDE2 password
	//@nCodePage: code page of the torrent file
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_Init3( 
		HDownloader hDownloader,
		const char *pData, int nLength,
		BYTE *pPreAllocFile, int nPreAllocFileLen,
		BOOL bOnlyCheckFile = FALSE,
		const char * lpszDestFileName = NULL,
		const char * lpszConfig = NULL,
		const char * lpszLogFileName = NULL,
		const char * lpszStatusFileName = NULL,
		BOOL bQuicklySeed = FALSE,
		const char * lpszDesKey = NULL,
		UINT nCodePage = CP_ACP );
	
	//初始化下载对象4
	//Initialize a HDownloader
	//@pData: a torrent binary object, a pointer to a binary torrent file content
	//@nLength: the length of a torrent binary object
	//@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
	//@nPreAllocFileLen: length of preallocated array
	//@bOnlyCheckFile: only verify data of files
	//@lpszDestFileName: the downloaded filename
	//@hConfigIni: kernel configuration file handle - INI file
	//@lpszLogFileName: output log filename
	//@lpszStatusFileName: downloading status filename
	//@lpszDesKey: DES-EDE2 password
	//@nCodePage: code page of the torrent file
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_Init4( 
		HDownloader hDownloader,
		const char *pData, int nLength,
		BYTE *pPreAllocFile, int nPreAllocFileLen,
		BOOL bOnlyCheckFile = FALSE,
		const char * lpszDestFileName = NULL,
		HConfigIni hConfigIni = NULL,
		const char * lpszLogFileName = NULL,
		const char * lpszStatusFileName = NULL,
		BOOL bQuicklySeed = FALSE,
		const char * lpszDesKey = NULL,
		UINT nCodePage = CP_ACP );
	
	//释放下载对象
	//Release downloader handle
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_Release( HDownloader hDownloader );
	
	//执行下载线程
	//Execute downloader
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_Execute( HDownloader hDownloader );
	
	//暂停下载
	//Pause downloader
	FTKERNELAPI_API void BTAPI FTK_Downloader_Pause( HDownloader hDownloader );
	
	//恢复下载
	//Resume downloader
	FTKERNELAPI_API void BTAPI FTK_Downloader_Resume( HDownloader hDownloader );
	
	//是否已经初始化
	//Is downloader intialized?
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_IsInit( HDownloader hDownloader );
	
	//获取下载任务目前的阶段状态
	//Return downloader state
	FTKERNELAPI_API UINT BTAPI FTK_Downloader_GetState( HDownloader hDownloader );
	
	//是否只是进行文件检查
	//Only checking file, don't downloading...
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_IsOnlyCheckFile( HDownloader hDownloader );
	
	//是否已经完成了下载(判断选择文件下载)
	//Is all selected files finished?
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_IsFinished( HDownloader hDownloader );
	
	//是否已经完成了下载(全部下载)
	//Is all files finished?
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_IsAllFinished( HDownloader hDownloader );
	
	//连接指定的Peer
	//Add external source peer
	FTKERNELAPI_API void BTAPI FTK_Downloader_AddSource( HDownloader hDownloader, const char *pchIP, unsigned short nPort, const BYTE *pPeerID = NULL, unsigned char nTunnel = 0 );
	
	//连接指定的User
	//Add external source peer(socket handle)
	FTKERNELAPI_API void BTAPI FTK_Downloader_AddSourceExt( HDownloader hDownloader, unsigned int nSocket );
	
	//外部动态增加辅助的Announce
	//Add external announce
	FTKERNELAPI_API void BTAPI FTK_Downloader_AddExtAnnounce( HDownloader hDownloader, const char * lpszAnnounce );
	
	//手动控制Announce马上进行连接
	//Reannounce manually
	FTKERNELAPI_API void BTAPI FTK_Downloader_ReannounceAll( HDownloader hDownloader );
	
	//按照块的先后顺序进行下载(适用于边下载边播放的情况)
	//Tell kernel to sequential download piece
	FTKERNELAPI_API void BTAPI FTK_Downloader_SetSeqPicker( HDownloader hDownloader, BOOL bSeq = FALSE, int nSEQFileIndex = 0 );
	
	//设置下载文件的优先级别
	// -2:不下载, -1: 低, 0: 一般, 1:高
	//Set priority of file
	//-2: no download, -1: low, 0: middle, 1: high
	FTKERNELAPI_API void BTAPI FTK_Downloader_SetFilePriority( HDownloader hDownloader, int nIndex, char chPriority = 0, BOOL bDoPriority = TRUE );
	
	//强制立刻重新将文件的优先级赋值给Piece
	//Force to set priority of all piece immediately 
	FTKERNELAPI_API void BTAPI FTK_Downloader_ForceFilePriority( HDownloader hDownloader );
	
	//外部调用, 手动设置最大的下载率限制(0.0表示没有限制)
	//Set fixed max download rate
	FTKERNELAPI_API void BTAPI FTK_Downloader_SetFixMaxDownloadRate( HDownloader hDownloader, double fMaxDownloadRate = 0.0 );