FTKernelAPI_SDK/CSharpDemo/FTKernelAPI.cs


		//设置兼容某些常见的错误torrent格式
		//Set to open some mistake mistaken TORRENT file
		[DllImport("FTKernelAPI.dll",
  　　　　EntryPoint="FTK_Context_TorrentFile", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Context_TorrentFile( bool bValidEof, bool bValidSort );

		//设置日志的语言文件
		//Set language to write log
		[DllImport("FTKernelAPI.dll",
  　　　　EntryPoint="FTK_Context_OpenLanguageFile", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Context_OpenLanguageFile( string sLanguageFile );

		/////////////////////////////////////////////////////////////////////////////////////
		
		//Create a new uint handle
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_Open", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern uint FTK_Downloader_Open();

		//Destroy a uint hanle
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_Close", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Downloader_Close( uint hDownloader );

		//提前的初始化IP过滤对象的函数(FTK_Downloader_Init* 函数之前调用), 过滤某些段的IP地址, "ipfilter.dat" 文件和eMule(电骡)兼容
		//Previous Initialize IP filter object to filter some peer's IP, "ipfilter.dat" file is compatiable with eMule.
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_PreInitIPFilter", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Downloader_PreInitIPFilter( uint hDownloader, string sIPFilterFile, uint nLevel );
	
		//提前的初始化, 按照块的先后顺序进行下载(适用于边下载边播放的情况)
		//Previous Initialize, Tell kernel to sequential download piece
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_PreInitSEQMode", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern void FTK_Downloader_PreInitSEQMode( uint hDownloader );
	
		//预先初始化文件选择下载的优先级别
		//数组中，每个元素的值表示: -2:不下载, -1: 低, 0: 一般, 1:高
		//Previous Initialize, Tell kernel to Set priority of file
		//-2: no download, -1: low, 0: middle, 1: high
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_PreInitFilePriority", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern void FTK_Downloader_PreInitFilePriority( uint hDownloader, string sFilePriority, int nFilesCount );

		//初始化下载对象
		//Initialize a uint
		//@sTorrentFileName: a torrent file name
		//@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
		//@nPreAllocFileLen: length of preallocated array
		//@bOnlyCheckFile: only verify data of files
		//@sDestFileName: the downloaded filename
		//@sConfig: kernel configuration file - INI file
		//@sLogFileName: output log filename
		//@sStatusFileName: downloading status filename
		//@sDesKey: DES-EDE2 password
		//@nCodePage: code page of the torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_Init", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Downloader_Init( 
			uint hDownloader, 
			String sTorrentFileName, 
			[MarshalAs(UnmanagedType.LPArray)] byte[] pPreAllocFile, 
			int nPreAllocFileLen, 
			bool bOnlyCheckFile,
			String sDestFileName,
			String sConfigFile,
			String sLogFileName,
			String sStatusFileName,
			bool bQuicklySeed,
			String sDesKey,
			uint nCodePage );

		//初始化下载对象2
		//Initialize a uint
		//@sTorrentFileName: a torrent file name
		//@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
		//@nPreAllocFileLen: length of preallocated array
		//@bOnlyCheckFile: only verify data of files
		//@sDestFileName: the downloaded filename
		//@hConfigIni: kernel configuration file handle - INI file
		//@sLogFileName: output log filename
		//@sStatusFileName: downloading status filename
		//@sDesKey: DES-EDE2 password
		//@nCodePage: code page of the torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_Init2", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Downloader_Init2( 
			uint hDownloader, 
			String sTorrentFileName, 
			[MarshalAs(UnmanagedType.LPArray)] byte[] pPreAllocFile, 
			int nPreAllocFileLen, 
			bool bOnlyCheckFile,
			String sDestFileName,
			uint hConfigFile,
			String sLogFileName,
			String sStatusFileName,
			bool bQuicklySeed,
			String sDesKey,
			uint nCodePage );

		//初始化下载对象3
		//Initialize a uint
		//@pData: a torrent binary object, a pointer to a binary torrent file content
		//@nLength: the length of a torrent binary object
		//@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
		//@nPreAllocFileLen: length of preallocated array
		//@bOnlyCheckFile: only verify data of files
		//@sDestFileName: the downloaded filename
		//@sConfig: kernel configuration file - INI file
		//@sLogFileName: output log filename
		//@sStatusFileName: downloading status filename
		//@sDesKey: DES-EDE2 password
		//@nCodePage: code page of the torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_Init3", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Downloader_Init3( 
			uint hDownloader,
			[MarshalAs(UnmanagedType.LPArray)] byte[] pData, 
			int nLength,
			int nPreAllocFileLen, 
			bool bOnlyCheckFile,
			String sDestFileName,
			String sConfigFile,
			String sLogFileName,
			String sStatusFileName,
			bool bQuicklySeed,
			String sDesKey,
			uint nCodePage );
	
		//初始化下载对象4
		//Initialize a uint
		//@pData: a torrent binary object, a pointer to a binary torrent file content
		//@nLength: the length of a torrent binary object
		//@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
		//@nPreAllocFileLen: length of preallocated array
		//@bOnlyCheckFile: only verify data of files
		//@sDestFileName: the downloaded filename
		//@hConfigIni: kernel configuration file handle - INI file
		//@sLogFileName: output log filename
		//@sStatusFileName: downloading status filename
		//@sDesKey: DES-EDE2 password
		//@nCodePage: code page of the torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_Init4", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Downloader_Init4( 
			uint hDownloader,
			[MarshalAs(UnmanagedType.LPArray)] byte[] pData, 
			int nLength,
			[MarshalAs(UnmanagedType.LPArray)] byte[] pPreAllocFile, 
			int nPreAllocFileLen, 
			bool bOnlyCheckFile,
			String sDestFileName,
			uint hConfigFile,
			String sLogFileName,
			String sStatusFileName,
			bool bQuicklySeed,
			String sDesKey,
			uint nCodePage );

		//释放下载对象
		//Release downloader handle
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_Release", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Downloader_Release( uint hDownloader );

		//执行下载线程
		//Execute downloader
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_Execute", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Downloader_Execute( uint hDownloader );

		//暂停下载
		//Pause downloader
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_Pause", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Downloader_Pause( uint hDownloader );

		//恢复下载
		//Resume downloader
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_Resume", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Downloader_Resume( uint hDownloader );

		//是否已经初始化
		//Is downloader intialized?
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_IsInit", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Downloader_IsInit( uint hDownloader );

		//获取下载任务目前的阶段状态
		//Return downloader state
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_GetState", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern DLSTATE FTK_Downloader_GetState( uint hDownloader );

		//是否只是进行文件检查
		//Only checking file, don't downloading...
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_IsOnlyCheckFile", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Downloader_IsOnlyCheckFile( uint hDownloader );

		//是否已经完成了下载(判断选择文件下载)
		//Is all selected files finished?
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_IsFinished", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Downloader_IsFinished( uint hDownloader );

		//是否已经完成了下载(全部下载)
		//Is all files finished?
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_IsAllFinished", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern bool FTK_Downloader_IsAllFinished( uint hDownloader );

		//连接指定的Peer
		//Add external source peer
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_AddSource", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Downloader_AddSource( uint hDownloader, string sIP, ushort nPort, [MarshalAs(UnmanagedType.LPArray)] byte[] pPeerID );

		//连接指定的User
		//Add external source peer(socket handle)
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_AddSourceExt", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Downloader_AddSourceExt( uint hDownloader, uint nSocket );

		//外部动态增加辅助的Announce
		//Add external announce
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_AddExtAnnounce", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Downloader_AddExtAnnounce( uint hDownloader, string sAnnounce );

		//手动控制Announce马上进行连接
		//Reannounce manually
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_ReannounceAll", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Downloader_ReannounceAll( uint hDownloader );

		//按照块的先后顺序进行下载(适用于边下载边播放的情况)
		//Tell kernel to sequential download piece
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_SetSeqPicker", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Downloader_SetSeqPicker( uint hDownloader, bool bSeq );

		//设置下载文件的优先级别
		// -2:不下载, -1: 低, 0: 一般, 1:高
		//Set priority of file
		//-2: no download, -1: low, 0: middle, 1: high		
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_SetFilePriority", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Downloader_SetFilePriority( uint hDownloader, int nIndex, sbyte chPriority, bool bDoPriority );

		//强制立刻重新将文件的优先级赋值给Piece
		//Force to set priority of all piece immediately 
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_ForceFilePriority", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Downloader_ForceFilePriority( uint hDownloader );

		//外部调用, 手动设置最大的下载率限制(0.0表示没有限制)
		//Set fixed max download rate
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Downloader_SetFixMaxDownloadRate", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern void FTK_Downloader_SetFixMaxDownloadRate( uint hDownloader, double fMaxDownloadRate );
